# striqt

./: .buildinfo  .gitignore  .gitmodules  LICENSE.md  README.md  api_reference.html  environment.yml  environment_no_cuda.yml  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  striqt.analysis.html  striqt.analysis.specs.html  striqt.sensor.bindings.html  striqt.sensor.calibration.html  striqt.sensor.html  striqt.sensor.peripherals.html  striqt.sensor.sinks.html  striqt.sensor.sources.html  striqt.sensor.specs.html  striqt.sensor.typing.html  striqt.sensor.util.html
.doctrees/: api_reference.doctree  environment.pickle  index.doctree  striqt.analysis.doctree  striqt.analysis.specs.doctree  striqt.sensor.bindings.doctree  striqt.sensor.calibration.doctree  striqt.sensor.doctree  striqt.sensor.peripherals.doctree  striqt.sensor.sinks.doctree  striqt.sensor.sources.doctree  striqt.sensor.specs.doctree  striqt.sensor.typing.doctree  striqt.sensor.util.doctree
.doctrees/guide/: 01_introduction.doctree
.doctrees/reference/: api.doctree  cli.doctree
.doctrees/reference/api/: striqt.analysis.doctree  striqt.analysis.specs.doctree  striqt.sensor.bindings.doctree  striqt.sensor.calibration.doctree  striqt.sensor.doctree  striqt.sensor.peripherals.doctree  striqt.sensor.sinks.doctree  striqt.sensor.sources.doctree  striqt.sensor.specs.doctree  striqt.sensor.util.doctree
.doctrees/reference/cli/: acquisition.doctree  check-sweep.doctree  convert-spec.doctree  datasets.doctree  plot-captures.doctree  rechunk-zarr.doctree  sensor-sweep.doctree  specs.doctree
.pixi/: config.toml
_sources/: index.rst.txt  striqt.analysis.rst.txt  striqt.sensor.calibration.rst.txt  striqt.sensor.peripherals.rst.txt  striqt.sensor.specs.rst.txt  striqt.sensor.typing.rst.txt
_sources/reference/: api.rst.txt  cli.rst.txt
_sources/reference/api/: striqt.sensor.sources.rst.txt
_sources/reference/cli/: check-sweep.rst.txt  convert-spec.rst.txt  plot-captures.rst.txt  rechunk-zarr.rst.txt  sensor-sweep.rst.txt
_static/: basic.css  pyramid.css
chores/: push-docs.sh
doc/: api_reference.rst  calibration-sweep.yaml  conf.py  index.rst  reference-sweep.yaml  striqt.analysis.specs.rst  striqt.sensor.bindings.rst  striqt.sensor.typing.rst
doc/reference/: api.rst  cli.rst
doc/reference/api/: striqt.analysis.rst  striqt.sensor.bindings.rst  striqt.sensor.rst  striqt.sensor.sinks.rst  striqt.sensor.util.rst
doc/reference/cli/: acquisition.rst  datasets.rst  specs.rst
environments/: airt.yml  analysis-cpu-cuda.yml  build.py  channel-analysis-cpu-cuda.yml  channel-analysis-cpu.yml  cpu-only.yml  cpu.yml  cuda.yml  edge-airt-cuda.yml  edge-airt.yml  edge-sensor-airt.yml  gpu-cpu.yml  mlx.yml  post-analysis-cpu-cuda.yml  post-analysis-cpu.yml  pyproject.py  torch.yml
environments/recipes/: analysis-cpu-cuda.yml  analysis-cpu.yml  edge-airt-cuda.yml  edge-airt.yml  edge-sensor-airt.yml  gpu-cpu.yml  post-analysis-cpu.yml
environments/recipes/layers/: add-airt.yml  (+3 more)
environments/unmaintaned/: mlx.yml
guide/: 01_introduction.html
notebooks/: acquire_airt.ipynb  acquire_test.ipynb  as_xarray.ipynb  demo_awgn_cpu.ipynb  demo_awgn_gpu.ipynb  demo_cmw500.ipynb  demo_gpu_cupy.ipynb  demo_gpu_mlx.ipynb  demo_lookout_mountain.ipynb  demo_sea_compute.ipynb  demo_sea_cpu_compute.ipynb  demo_sea_cuda_compute.ipynb  demo_sea_mlx_compute.ipynb  demo_sea_torch_compute.ipynb  demo_xarray_parameter_sweep.ipynb  profile_cupy.ipynb  run.json  run.yaml  summary.ipynb  test_ola.ipynb
notebooks/background/: compression.ipynb  diagnostic-data.ipynb  float_precision.ipynb  reduced-metadata.json  rpyc-multiprocessing.ipynb  sea-metadata.json  test_ola.ipynb  triggertest.ipy
notebooks/bitrotten_experiments/: demo_sea_mlx_compute.ipynb  demo_sea_torch_compute.ipynb
reference/: api.html  cli.html
reference/api/: striqt.analysis.html  striqt.analysis.specs.html  striqt.sensor.bindings.html  striqt.sensor.calibration.html  striqt.sensor.html  striqt.sensor.peripherals.html  striqt.sensor.sinks.html  striqt.sensor.sources.html  striqt.sensor.specs.html  striqt.sensor.util.html
reference/cli/: acquisition.html  check-sweep.html  convert-spec.html  datasets.html  plot-captures.html  rechunk-zarr.html  sensor-sweep.html  specs.html
scripts/: sweep.py
src/: iqwaveform
src/_cli/: edge_sensor_leave_running.py  edge_sensor_sweep.py
src/_edge_sensor_cli/: __init__.py  calibrate.py  check.py  edge_sensor_calibrate.py  edge_sensor_server.py  edge_sensor_sweep.py  plot.py  server.py  sweep.py
src/channel_analysis/: __init__.py  config.py  cuda_filter.py  cuda_kernels.py  dataarrays.py  figures.py  io.py  source.py  sources.py  structs.py  type_stubs.py  util.py  waveform.py
src/edge_analysis/: __init__.py  channel_analysis.py  channel_waveform.py  cuda_filter.py  figures.py  io.py
src/edge_analyzer/: channel_waveform.py  cuda_filter.py  diagnostics.py  io.py  metadata.py
src/edge_iq/: channel_analysis.py  io.py
src/edge_sensor/: __init__.py  _capture_data.py  _controller.py  _io.py  _iq_corrections.py  _sweeping.py  _util.py  actions.py  analysis.py  config.py  controller.py  dataset.py  diagnostic_data.py  host.py  io.py  iq_corrections.py  metadata.py  results.py  schemas.py  structs.py  sweep.py  sweeping.py  util.py
src/flex_spectrum_sensor_scripts/: __init__.py  edge_capture_plotter.py  edge_sensor_calibrate.py  edge_sensor_server.py  edge_sensor_sweep copy.py  edge_sensor_sweep.py  plot_edge_data.py
src/sensor_schematics/: __init__.py  frontend.py  rx_blocks.py  schematics.py
tests/: airt_acquire_iq.py  conftest.py  test_bindings.py  test_cpu_runs.py  test_imports.py  test_json_schema.py  test_yaml.py  test_yaml_loads.py
tests/sensor/: spec.yaml  test_cpu_runs.py  test_imports.py  test_yaml_loads.py
tests/sweeps/: cw-cpu.yaml  dirac_delta-cpu.yaml  noise-cpu.yaml  noise-gpu.yaml  sawtooth-cpu.yaml
tests/synthetic_waveforms/: cellular-sparse-cpu.yaml  noise-cpu.yaml  sawtooth-cpu.yaml
tests/waveform/: test_fourier.py  test_power_analysis.py
(+297 files in other folders)
