[project]
name = "striqt"
version = "0.4.0"
description = "tooling to support precision gpu-accelerated radio signal analysis and software radio automation"
requires-python = ">=3.9"
dependencies = [
    # numerical stack
    "array-api-compat>=1.6",
    "dask",
    "matplotlib~=3.7",
    "netCDF4",
    "numba",
    "numexpr~=2.8",
    "numpy>=1.21,<3",
    "pandas>=1.5",
    "scipy>=1.13",
    "xarray>=2024.3",
    "zarr>=2.18,<4",

    # schemas for the yaml specs and validation
    "msgspec>=0.19.0",

    # for built-in debugging
    "ipython>=8.18.1",

    # platform introspection tooling
    "platformdirs>=4.2.0",
    "psutil>=7.0.0",

    # compatibility shims for older python that might be removed
    # in the future
    "eval_type_backport",
    "exceptiongroup>=1.2",
    "typing-extensions",
]

[[project.authors]]
name = "Dan Kuester"
email = "daniel.kuester@nist.gov"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "jupyter",
    "ruff",
]
gpu = [
    "cupy >= 12.2",
    "cython",
]
test = [
    "pytest",
    "nptdms",
]

# this will still require external SoapySDR
#edge-airstack-1 = [
#    "cupy-cuda102",
#    "cython<3",
#    "dulwich",
#    "matplotlib>=3.7",
#    "numba~=0.56.0",
#    "numpy>=1.21,<2",
#    "pandas",
#    "pytools>=2022.1.12",
#    "scipy~=1.9",
#    "ssmdevices",
#    "zarr~=2.18.2",
#    "eval_type_backport"
#]

[project.scripts]
check-sweep = "striqt.cli.check_sweep:run"
sensor-sweep = "striqt.cli.sensor_sweep:run"
plot-capture = "striqt.cli.plot_capture:run"
rechunk-zarr = "striqt.cli.rechunk_zarr:run"

[tool.ruff]
target-version = "py39"
extend-include = [ "*.ipynb", ]
line-length = 88

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = [ "F401", "F403", "E402"]

[tool.hatch.build.targets.wheel]
packages = [ "src/striqt", ]

[tool.hatch.build.targets.sdist]
packages = [ "src/striqt", ]


[tool.ty.rules]
call-top-callable = "ignore"
invalid-type-form = "ignore"