[project]
name = "striqt"
dynamic = ["version"]
description = "tooling to support precision gpu-accelerated radio signal analysis and software radio automation"
requires-python = ">=3.9"
dependencies = [
    # compute
    "array-api-compat>=1.6",
    "dask",
    "netCDF4",
    "numba",
    "numexpr~=2.8",
    "numpy>=1.21,<3",
    "pandas>=1.5",
    "scipy>=1.13",
    "xarray>=2024.3",
    "zarr>=2.18,<4",
    # plotting
    "matplotlib~=3.7",
    "kitcat >= 1.3.0",
    "matplotlib-backend-sixel",
    # schemas for the yaml specs and validation
    "msgspec>=0.19.0",
    # for built-in debugging
    "ipython>=8.18.1",
    # platform introspection tooling
    "platformdirs>=4.2.0",
    "psutil>=7.0.0",
    # compatibility shims for older python that might be removed
    # in the future
    "eval_type_backport",
    "exceptiongroup>=1.2",
    "typing-extensions",
]

[[project.authors]]
name = "Dan Kuester"
email = "daniel.kuester@nist.gov"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "jupyter",
    "ruff",
    "ty"
]
doc = [
    "sphinx",
    "sphinx-click",
    "toml",
    "myst_nb"
]
gpu = [
    "cupy >= 12.2",
    "cython",
]
test = [
    "pytest",
    "nptdms",
    "pytest-order",
    "hypothesis"
]

[project.scripts]
check-sweep = "striqt.cli.check_sweep:cli"
sensor-sweep = "striqt.cli.sensor_sweep:cli"
plot-capture = "striqt.cli.plot_capture:cli"
rechunk-zarr = "striqt.cli.rechunk_zarr:cli"
convert-spec = "striqt.cli.convert_spec:cli"

[tool.ruff]
target-version = "py39"
extend-include = [ "*.ipynb", ]
line-length = 88
preview = true

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/striqt", ]

[tool.hatch.build.targets.sdist]
packages = [ "src/striqt", ]

[tool.hatch.version]
path = "src/striqt/sensor/__about__.py"

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [
    ".venv",
    "venv",
    "env",
    "bin",
    "dist",
    "build"
]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = [ "F401", "F403", "E402"]

[tool.ty.rules]
call-top-callable = "ignore"
invalid-type-form = "ignore"

[tool.tox]
# Forces tox to auto-provision the tox-uv plugin if missing
requires = ["tox-uv"]
env_list = ["py39", "py314"]

[tool.tox.env_run_base]
# Dependencies specified JSON-style for TOML compatibility
package = "editable"
deps = ["pytest"]
extras = ["test"]
commands = [
    ["pytest"]
]